added simple grouping magnism.. Next task is to figure out the broadcast

--- a/server_side/usr_ant/templates/signupform.html
+++ b/server_side/usr_ant/templates/signupform.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>test template</title>
+        <title>Sign up as peer</title>
 
     </head>
     <body>
 
-        <form action = "peerlist/" method="post">
+        <form method="post">
            {% csrf_token %}
            {{ form }}
            <input type="submit" value ="behold">
