--- a/server_side/usr_ant/templates/groupmanager.html
+++ b/server_side/usr_ant/templates/groupmanager.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Login as peer</title>
+        <title>change your group setting</title>
 
     </head>
     <body>
